--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   # 1. State Management (Otak Aplikasi)
   provider: ^6.1.5
   
+  # 2. Bluetooth Low Energy
+  flutter_blue_plus: ^1.32.12
+  
   # 3. Database Lokal (Simpan Riwayat)
   sqflite: ^2.4.2
   path: ^1.9.1
